objects/SVMXC__Timesheet_Entry__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object refers to time logged by every user on per day basis for the timesheet master record.</description>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field refers to Account associated to User in Timesheet Header record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Entrys</relationshipLabel>
        <relationshipName>Time_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity__c</fullName>
        <description>This field refers to the type of Time Entry record.</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Comments__c</fullName>
        <description>This field refers to information provided for Time Entry record</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Duration__c</fullName>
        <description>This field refers to time taken to complete the activity. It is defined in minutes</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Time__c</fullName>
        <description>This field refers to the End Time of Time entry record</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Salesforce_Event__c</fullName>
        <description>This field refers to relation between Time Entry and Salesforce Event</description>
        <label>Salesforce Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field refers to relation between Time Entry and Servicemax Event</description>
        <label>ServiceMax Event</label>
        <referenceTo>SVMXC__SVMX_Event__c</referenceTo>
        <relationshipLabel>Time Entrys</relationshipLabel>
        <relationshipName>Time_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Time__c</fullName>
        <description>This field refers to the Start Time of Time entry record</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Task__c</fullName>
        <description>This field refers to relation between Time Entry and Task</description>
        <label>Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Timesheet_Day__c</fullName>
        <description>This field refers to relation between Times Entry and Timesheet Details-Daily.</description>
        <label>Timesheet Day Entry</label>
        <referenceTo>SVMXC__Timesheet_Day_Entry__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Timesheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>SVMXC__Timesheet__c</referenceTo>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field refers to relation between Time Entry and Work Detail</description>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Time Entrys</relationshipLabel>
        <relationshipName>Time_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>